// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render item with children 1`] = `
<button
  class="chip"
>
  Name
  <span
    aria-label="su-times"
    class="su-times clickable icon"
    role="button"
    tabindex="0"
  />
</button>
`;

exports[`Should render item without icon in disabled state 1`] = `
<button
  class="chip disabled"
>
  Name
</button>
`;
